[project]
name = "pdf-to-epub-converter-gui-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "ebooklib (>=0.19,<0.20)",
    "pymupdf (>=1.26.3,<2.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "cx-freeze (>=8.3.0,<9.0.0)",
    "pyinstaller (>=6.14.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
